--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -40,7 +40,7 @@
  FMU_nur_deutsch:0 "Nur Deutsch Sprechen!"
  FMU_nur_deutsch_desc:0 "To further our unity we must quash the use of Dutch, Spanish, and any Muror or Kanagan dialects. German is the only language of the people!"
  FMU_kriegspfad:1 "Der Kriegspfad"
- FMU_kriegspfad_desc:1 "\"\War between nations is inevitable. It is as necessary as breathing... for if a man stops breathing he dies. So too does the nation which does not embrace war.\"\ -H. B. Immermann"
+ FMU_kriegspfad_desc:1 "\"War between nations is inevitable. It is as necessary as breathing... for if a man stops breathing he dies. So too does the nation which does not embrace war.\" -H. B. Immermann"
  FMU_germanic_research_pact:1 "Germanic Research Pact"
  FMU_germanic_research_pact_desc:1 "Our research would benefit greatly from access to the brightest minds from the Fatherland."
  FMU_ocean_destiny:0 "The Ocean is our Destiny"
@@ -56,7 +56,7 @@
  FMU_walls_of_steel:0 "Walls of Steel"
  FMU_walls_of_steel_desc: "We shall never allow our enemies to set foot on the soil of our precious Heartland. Though it pains us we must prepare to repel invasions before it is too late."
  FMU_schimmelpferds_address:0 "Großadmiral Schimmelpferd's Address"
- FMU_schimmelpferds_address_desc:0 "\"\I stand before this assembly as a man humiliated. Our mighty navy is unable to stem the oncoming tide of war. We must now turn our minds to the specter of defense. Despite our precarious position we can still defend the Herzland, our home.\"\ GrAdm Schimmelpferd to the Volksvertretung"
+ FMU_schimmelpferds_address_desc:0 "\"I stand before this assembly as a man humiliated. Our mighty navy is unable to stem the oncoming tide of war. We must now turn our minds to the specter of defense. Despite our precarious position we can still defend the Herzland, our home.\" GrAdm Schimmelpferd to the Volksvertretung"
  FMU_austral_ocean:0 "Austral Ocean Dominance"
  FMU_austral_ocean_desc:0 "Our navy now far outnumbers that of the other industrialized nations in the Austral Ocean. We are unmatched in might!"
  FMU_defend_defend_defend:0 "Defend, Defend and Defend Again!"
@@ -117,8 +117,8 @@
  FMU_1938_domestic_tech_fair_desc:1 "If companies compete, especially in the public eye, they can be driven to produce results faster and cheaper. A national fair would put their efforts on display for the public."
  FMU_1940_domestic_tech_fair:1 "The 1940 Domestic Technology National Fair"
  FMU_1940_domestic_tech_fair_desc:1 "Our last biennial fair was a resounding success. By continuing this tradition we can ensure our technological dominance in all spheres."
- The 1942 Domestic Technology National Fair:1 "The 1942 Domestic Technology National Fair"
- The 1942 Domestic Technology National Fair_desc:1 "By now our people are expecting new wonders every other year from our companies. We should not disappoint them."
+ FMU_1942_domestic_tech_fair:1 "The 1942 Domestic Technology National Fair"
+ FMU_1942_domestic_tech_fair_desc:1 "By now our people are expecting new wonders every other year from our companies. We should not disappoint them."
  FMU_1944_domestic_tech_fair:1 "The 1944 Domestic Technology National Fair"
  FMU_1944_domestic_tech_fair_desc:1 "Our technology fair has become so successful that companies now have to compete for space to present their ideas to the public. Perhaps we could provide them with a more permanent venue for research and development, while still benefitting our glorious nation."
  FMU_kings_university:1 "Kaiser's University"
@@ -132,7 +132,7 @@
  FMU_einsteins_theorem:1 "Einstein's Theorem"
  FMU_einsteins_theorem_desc:1 "The German ex-pat Albert Einstein published some very interesting papers in 1905. Some of our scientists would like permission to delve further into the mysteries of atoms and the powers contained therein."
  FMU_unternehmen_sternenmacher:1 "Unternehmen Sternenmacher"
- FMU_unternehmen_sternenmacher_desc:1 "The time has come for our nation to make our own \"\Wunderwaffen\"\. We must arm ourselves with ultimate weapons to deter would-be attackers."
+ FMU_unternehmen_sternenmacher_desc:1 "The time has come for our nation to make our own \"Wunderwaffen\". We must arm ourselves with ultimate weapons to deter would-be attackers."
  FMU_integrate_manu:1 "Integrate Manu"
  FMU_integrate_manu_desc:1 "Now that we no longer have to worry about the Treaty of Versailles, we can finally integrate Manustaat back into the fold where it belongs."
  FMU_diplomatic_outreach:1 "Diplomatic Outreach"
@@ -152,7 +152,7 @@
  FMU_modern_germanic_state:1 "A Modern Germanic State"
  FMU_modern_germanic_state_desc:1 "Our identity as Muan Germans is necessary if we are to survive as a nation. Our emphasis should be on the language and culture of the majority, German." 
  FMU_twee_talen:1 "Twee Talen - Ein Volk"
- FMU_twee_talen_desc:1 "\"\Two languages - One People\"\ Though we started as Dutch and German speaking colonies, we are now one people with a common heritage. Our focus should be on uniting as a people despite our differences." 
+ FMU_twee_talen_desc:1 "\"Two languages - One People\" Though we started as Dutch and German speaking colonies, we are now one people with a common heritage. Our focus should be on uniting as a people despite our differences." 
  FMU_heartland_development:1 "Heartland Development"
  FMU_heartland_development_desc:1 "Our two main industrial hubs, located in the northwest and southeast, should receive the bulk of our investments. This will ensure prosperity comes to those who deserve it." 
  FMU_compensate_landowners:1 "Compensate the Landowners"
@@ -160,7 +160,7 @@
  FMU_limit_democratic_reforms:1 "Limit Democratic Reforms"
  FMU_limit_democratic_reforms_desc:1 "While we are turning away from global conflicts we must still ensure that the people, the right people, are able to keep our nation on track."
  FMU_reform_voting_laws:1 "Reform Landownership Voting Laws"
- FMU_reform_voting_laws_desc:1 "\"\What right does a man who owns nothing, not even the ground he stands on, to direct the affairs of this nation? None, I say!\"\ - Erich von Liebestein, Rep. of Edwardsberg"
+ FMU_reform_voting_laws_desc:1 "\"What right does a man who owns nothing, not even the ground he stands on, to direct the affairs of this nation? None, I say!\" - Erich von Liebestein, Rep. of Edwardsberg"
  FMU_new_constitution:1 "A New Constitution"
  FMU_new_constitution_desc:1 "The ideals espoused by our grandfathers during the revolution were sufficient to the time, but they no longer apply to a modern state such as ours. We have grown beyond that first Constitution and now we must rewrite it for the good of the nation."
  FMU_strengthen_central:1 "Strengthen the Power of the Central Government"
@@ -170,17 +170,17 @@
  FMU_ban_fascists:1 "Ban the Fascist Parties"
  FMU_ban_fascists_desc:1 "Populist movements, though by definition popular with the people, are prone to being hijacked by ideological zealots who only have their best interests at heart. No more, we say, no more!"
  FMU_install_noble_houses:1 "Install the Noble Houses"
- FMU_install_noble_houses_desc:1 "The rich and powerful men in our nation should by right be recognized for their importance and leadership. We will enshrine the \"\Right of Peerage\"\ and elevate them to their rightful status."
+ FMU_install_noble_houses_desc:1 "The rich and powerful men in our nation should by right be recognized for their importance and leadership. We will enshrine the \"Right of Peerage\" and elevate them to their rightful status."
  FMU_ban_democrats:1 "Ban the Democratic Parties"
  FMU_ban_democrats_desc:1 "The time has come! Now that the Communists and the Fascists have been crushed we must continue onward to stability; we must eliminate the poison that is democracy."
  FMU_elect_kaiser:1 "The Election of the Kaiser"
  FMU_elect_kaiser_desc:1 "Now that our nation has adequate laws and guidance, we must elevate one of our noblemen to the position of Kaiser. This will properly define our great nation and give our people the leader they need."
  FMU_white_immigration:1 "White Immigration Laws"
- FMU_white_immigration_desc:1 "\"\Any person of white heritage, of European or purely European derived ancestry, is permitted to apply for immigrant status to our nation. No person of black, mulatto, or other mixed race may be permitted resident status.\"\ National Immigration Law of 1946, Clause D."
+ FMU_white_immigration_desc:1 "\"Any person of white heritage, of European or purely European derived ancestry, is permitted to apply for immigrant status to our nation. No person of black, mulatto, or other mixed race may be permitted resident status.\" National Immigration Law of 1946, Clause D."
  FMU_encourage_settlement:1 "Encourage Settlement of Non-White Areas"
  FMU_encourage_settlement_desc:1 "Now that the Constitution is rewritten and the Kaiser has power we must ensure a more homogenized nation by encouraging movement to the minority areas of the nation."
  FMU_factories_of_gold:1 "Factories of Gold"
- FMU_factories_of_gold_desc:1 "With the non-Whites in our nation properly subjugated, we can turn our minds toward our ultimate goal - the acquisition of immense amounts of wealth. We shall bring the Kaiser's \"\Factories of Gold\"\ to life and bring never-ending prosperity to the deserving of our nation."
+ FMU_factories_of_gold_desc:1 "With the non-Whites in our nation properly subjugated, we can turn our minds toward our ultimate goal - the acquisition of immense amounts of wealth. We shall bring the Kaiser's \"Factories of Gold\" to life and bring never-ending prosperity to the deserving of our nation."
  FMU_tapestry_many_colors:1 "A Tapestry of Many Colors"
  FMU_tapestry_many_colors_desc:1 "The majority of our people speak German, but this should not be taken to mean that the contributions of our minorities are any less important. We are a nation of people from many backgrounds, some German, some Dutch, some Kanagans and some Muror. By celebrating our differences we will be a better, stronger nation."
  FMU_commit_to_neutrality:1 "Commitment to Neutrality"
@@ -194,9 +194,9 @@
  FMU_strengthen_ties:0 "Strengthen Ties to Other Democracies"
  FMU_strengthen_ties_desc:0 "Long ago we received guidance and aid from other democracies when we were seeking our freedom. Now we must realign ourselves with them to help us become more accepted internationally."
  FMU_womens_suffrage:0 "Women's Suffrage"
- FMU_womens_suffrage_desc:0 "\"\If we are to build a truly equal and just society then women must also be allowed to vote! Should the woman who teaches your children about our government have no say in its make up? I say, no!\"\ - Elise Hochsterne, Women's Suffrage Advocate"
+ FMU_womens_suffrage_desc:0 "\"If we are to build a truly equal and just society then women must also be allowed to vote! Should the woman who teaches your children about our government have no say in its make up? I say, no!\" - Elise Hochsterne, Women's Suffrage Advocate"
  FMU_path_of_socialism:0 "The Path of Socialism"
- FMU_path_of_socialism_desc:0 "\"\All men are equal before the eyes of the Law. The worker, the soldier... every man has worth and should be valued by the State.\"\ - Harald Gantz"
+ FMU_path_of_socialism_desc:0 "\"All men are equal before the eyes of the Law. The worker, the soldier... every man has worth and should be valued by the State.\" - Harald Gantz"
  FMU_soviet_brethren:0 "Our Soviet Brethren"
  FMU_soviet_brethren_desc:0 "This world is too dangerous to brave alone. Our Soviet brethren have been reaching out, trying to establish strong ties. If we reciprocate their efforts this may bloom into a boon for our people."
  FMU_unite_with_comintern:0 "Unite with the Comintern"
@@ -223,7 +223,7 @@
  FMU_tech_sharing_desc:0 "Allied technologies as well as our own could be combined to bring about supremacy in this insane global conflict. We must join together and combine our knowledge."
  FMU_influence_cdm:0 "Influence Côte des Manchots"
  FMU_influence_cdm_desc:0 "Many years ago we were on the opposite side of battlelines from our continental neighbors in Côte des Manchots. We must convince them that to fight side-by-side in a just war is the right thing to do, no matter the cost."
- FMU_influence_TOD:0 "nfluence Todorovia"
+ FMU_influence_TOD:0 "Influence Todorovia"
  FMU_influence_TOD_desc:0 "Despite many years of trying to understand our strange and reclusive neighbors we must make more efforts yet to bring them and their forces into this terrible global war. Every nation that stands with us is one more that will not stand against us."
  FMU_prepare_revolutionary_front:0 "Prepare the Revolutionary Front"
  FMU_prepare_revolutionary_front_desc:0 "We must soon bring the Revolution to the rest of the continent but the bourgeoise will certainly resist. By carefully planning our approach we can maximize our impact and smooth our way forward."
@@ -279,7 +279,7 @@
  FMU_advanced_rocketry_desc:0 "Building on the designs of the V-2 rockets from the Fatherland, our scientists have proposed even greater developments in rocket engine designs."
  FMU_early_ramjet_engines:0 "Early Ramjet Engines"
  FMU_early_ramjet_engines_desc:0 "One of our scientists, René Leduc, a French ex-pat, has developed an engine that can tremendously increase the speed of our aerial weapons: the ramjet."
- FMU_high_alt_spy_planes:0 High Altitude Spy Planes""
+ FMU_high_alt_spy_planes:0 "High Altitude Spy Planes""
  FMU_high_alt_spy_planes_desc:0 "By combining our knowledge of long-range aerial vehicles with jet technologies we can drastically increase the range of our spy planes."
  FMU_jet_strat_bombers:0 "Jet Strategic Bomber Designs"
  FMU_jet_strat_bombers_desc:0 "Strategic destruction brought to you by jet-powered bombers. Now our bombers will have increased range, carrying capacity, and maneuverability!"
