--- a/localisation/replace/AML_loading_tips_l_english.yml
+++ b/localisation/replace/AML_loading_tips_l_english.yml
@@ -17,35 +17,35 @@
  LOADING_TIP_16:0 "\"I know my rights, namely that I have none, and therefore nothing to lose.\"\n - Sumukivi Aepa’ato"
  LOADING_TIP_17:0 "\"Dempsey? He couldn't fight his way out of an old cobweb.\"\n - General Miles Fritzroy"
  LOADING_TIP_18:0 "\"Fitzroy? That baboon's ass is dumber than my horse.\"\n - General Miles Dempsey"
- LOADING_TIP_19:0 "\"Four corners. Four Winds. Slide home the rifle bolt.\"\n - Coded Atlantean Transmission"
- LOADING_TIP_20:0 "\"By bullet, by sword, or by blood - as God wills it!\"\n - British Lemurian Garrison Motto"
- LOADING_TIP_21:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n - Yangle Waglin Lumo"
- LOADING_TIP_22:0 "\"My men will follow me into hell and back. I decide when and where they fight - not some worthless bureaucrat in London!\"\n - General Miles Dempsey"
- LOADING_TIP_23:0 "\"Our gods have cursed us, and your white god has blessed you. This is not our home any longer; it is our prison.\"\n - King Wanulu of Qlach upon surrendering to the British"
+ LOADING_TIP_19:0 "\"Four corners. Four Winds. Slide home the rifle bolt.\"\n -Coded Atlantean Transmission"
+ LOADING_TIP_20:0 "\"By bullet, by sword, or by blood - as God wills it!\"\n -British Lemurian Garrison Motto"
+ LOADING_TIP_21:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n -Yangle Waglin Lumo"
+ LOADING_TIP_22:0 "\"My men will follow me into hell and back. I decide when and where they fight - not some worthless bureaucrat in London!\"\n -General Miles Dempsey"
+ LOADING_TIP_23:0 "\"Our gods have cursed us, and your white god has blessed you. This is not our home any longer; it is our prison.\"\n -King Wanulu of Qlach upon surrendering to the British"
  LOADING_TIP_24:0 "Everything the sea touches is ours\n - Atlantean Marine Motto"
- LOADING_TIP_25:0 "\"Atlantean air power? Ha! A group of frightened school children with kites could do better!\"\n - German Messerschmitt pilot"
+ LOADING_TIP_25:0 "\"Atlantean air power? Ha! A group of frightened school children with kites could do better!\"\n -German Messerschmitt pilot"
  LOADING_TIP_26:0 " The People \n The Gods \n The State \n - Inscription on the wall of the Blue Forum"
- LOADING_TIP_27:0 "\"Not bad for a frightened school boy with a kite! Eh, Fritz?\"\n - Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
+ LOADING_TIP_27:0 "\"Not bad for a frightened school boy with a kite! Eh, Fritz?\"\n -Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
  LOADING_TIP_28:0 "\"PAV VAKEA!\"\n - Battlecry heard on Crescent Beach, Atlantean invasion of Northern Germany"
- LOADING_TIP_29:0 "\"God does not intend for the atom to be split for war, no matter what the Americans may say.\"\n - Atlantean President Avaskanta Carras"
- LOADING_TIP_30:0 "\"Every damned time! The Germans ruined Napoleon, they started the Great War and now they're at it again!\"\n - Augustin Lefebvre, Prime Minister of Côte des Manchots"
+ LOADING_TIP_29:0 "\"God does not intend for the atom to be split for war, no matter what the Americans may say.\"\n -Atlantean President Avaskanta Carras"
+ LOADING_TIP_30:0 "\"Every damned time! The Germans ruined Napoleon, they started the Great War and now they're at it again!\"\n -Augustin Lefebvre, Prime Minister of Côte des Manchots"
  LOADING_TIP_31:0 "\"The German Army is so good at playing it by ear because it does its homework.\"\n - General Nagutrul Mixernet, Atlantean High Command"
- LOADING_TIP_32:0 "\"A state has no eternal allies and no perpetual enemies. Only its interests are eternal and perpetual.\"\n - Horujj Uaqril"
- LOADING_TIP_33:0 "\"Loyalty is a false concept; it can be switched, changed, challenged, and even used as an excuse to hurt the ones it’s for.\"\n - Party Leader Uorq Fasmiqr, Goprug Homeland Party" 
+ LOADING_TIP_32:0 "\"A state has no eternal allies and no perpetual enemies. Only its interests are eternal and perpetual.\"\n -Horujj Uaqril"
+ LOADING_TIP_33:0 "\"Loyalty is a false concept; it can be switched, changed, challenged, and even used as an excuse to hurt the ones it’s for.\"\n -Party Leader Uorq Fasmiqr, Goprug Homeland Party" 
  LOADING_TIP_34:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps"
  LOADING_TIP_35:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
- LOADING_TIP_36:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost then so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
+ LOADING_TIP_36:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost then so be it.\"\n -Winston Churchill, discussing the chaos in Lemuria" 
  LOADING_TIP_37:0 "\"I do not fear death; I live with it. My men answer for the gambles I make with their very lives. How can I play with stakes that high and shrink from the cost? I cannot.\"\n - General George Livingston III of British Lemuria " 
  LOADING_TIP_38:0 "\"I no longer believe there is a god - for if he does exist He must be truly mad! Look at the state of things!\"\n -Nawuq Fizroi, Yohannian High Commissioner"
- LOADING_TIP_39:0 "\"Its only a war crime if you lose!"\"\n -General Parunampindre of the Teravamsincha of Brazil"
- LOADING_TIP_40:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n - Yang Xinyi Luo, last Chancellor of the Trinsuyinese Democratic Republic, 1936"
- LOADING_TIP_41:0 "\"No where, in the laws of God or men, does it require that I stand by and do nothing as people die. Whether it is by the hand of a conqueror or a colonial overlord, Africans die every day. Enough, I say, enough!\"\n -King Roderiq I of Yohannia"
+ LOADING_TIP_39:0 "\"Its only a war crime if you lose!\"\n -General Parunampindre of the Teravamsincha of Brazil"
+ LOADING_TIP_40:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -Yangwaar Xinzim Raapure, last Chancellor of the Trinsuyinese Democratic Republic, 1936"
+ LOADING_TIP_41:0 "\"No where, in the laws of God or men, does it require that I stand by and do nothing as people die. Whether it is by the hand of a conqueror or a colonial overlord; Africans die every day. Enough, I say, enough!\"\n -King Roderiq I of Yohannia"
  LOADING_TIP_42:0 "\"The distinction between a merchant and a general is seen only by politicians who have no concept of either.\"\n -Atlantean Saying"
- LOADING_TIP_43:0 "\"I am not the hero the Africans wanted. I am the monster the British created."\"\n -King Roderiq I of Yohannia"
- LOADING_TIP_44:0 "\"What happens when the Light shines so painfully bright that it becomes more terrible than the Darkness?"\"\n - Avaskanta Carras, upon learning about the nuclear detonations over Japan"
- LOADING_TIP_45:0 "\"We came for the soft belly of Europe and found a tough old gut: a nightmare of mountains and concrete and machine guns."\"\n - Lemurian General Arnold DeChamps in Italy"
- LOADING_TIP_46:0 "\"A man who compliments another to his face is either a homosexual, or a tactician. So which are you?"\"\n King Roderiq I to Captured Atlanean General Rexet Nalingrat
- LOADING_TIP_47:0 "\"America, for all their talk of freedom, continues to ignore the plight of the Africans. If they will not help then we shall!"\"\n - King Roderiq I of Yohannia
- LOADING_TIP_48:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them."\"\n -King Roderiq I of Yohannia
- LOADING_TIP_49:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself."\" -Atlantean Report on Project Tangerine
- LOADING_TIP_50:0 "\"Dear God... What have they done!?!"\"\n -King Roderiq on receiving photographic evidence of the Holocaust 
+ LOADING_TIP_43:0 "\"I am not the hero the Africans wanted. I am the monster the British created.\"\n -King Roderiq I of Yohannia"
+ LOADING_TIP_44:0 "\"What happens when the Light shines so painfully bright that it becomes more terrible than the Darkness?\"\n -Avaskanta Carras, upon learning about the nuclear detonations over Japan"
+ LOADING_TIP_45:0 "\"We came for the soft belly of Europe and found a tough old gut: a nightmare of mountains and concrete and machine guns.\"\n -Lemurian General Arnold DeChamps in Italy"
+ LOADING_TIP_46:0 "\"A man who compliments another to his face is either a homosexual, or a tactician. So which are you?\"\n King Roderiq I to Captured Atlanean General Rexet Nalingrat"
+ LOADING_TIP_47:0 "\"America, for all their talk of freedom, continues to ignore the plight of the Africans. If they will not help then we shall!\"\n -King Roderiq I of Yohannia"
+ LOADING_TIP_48:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them.\"\n -King Roderiq I of Yohannia"
+ LOADING_TIP_49:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself.\" -Atlantean Report on Project Tangerine"
+ LOADING_TIP_50:0 "\"Dear God... What have they done!?!\"\n -King Roderiq on receiving photographic evidence of the Holocaust"
