Somebody Solve FMU's DEBT

--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -293,3 +293,5 @@
  FMU_zilver_industrieel_desc:0 "As one of the Dutch companies from Fijnland, Zilver Industrieel has requested permission to continue functioning despite the occupation. By showing the people of Fijnland some leeway we might find them more willing to accept our sovereignty."
  FMU_divert_engines:0 "Divert Engines to Civilian Uses"
  FMU_divert_engines_desc:0 "The fertile western lands have long been the breadbasket of our nation, but with industrialization of farming they could provide enough for the continent!"
+
+ FMU_manu_threat:0 "Freistaat Mu Annexed Manu!"
