--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -278,4 +278,8 @@
  STATE_1079:0 "Inaxe" 
  STATE_1080:0 "Navmaur" 
  STATE_1081:0 "Laytadale" 
- STATE_1082:0 "Muru'ona"
+ STATE_1082:0 "Muru'ona" 
+ STATE_1083:0 "Nuevo León" 
+ STATE_1084:0 "Sinaloa"
+ STATE_1085:0 "Zacatecas"
+ STATE_1086:0 "San Luis Potosí"
