--- a/localisation/AML_countries_cosmetic_l_english.yml
+++ b/localisation/AML_countries_cosmetic_l_english.yml
@@ -19,3 +19,11 @@
  NAF_FEDERATION_democratic_DEF:0 "the North Atlantic Federation"
  NAF_FEDERATION_communism:0 "Treaty of North Atlantic Socialist Republics"
  NAF_FEDERATION_communism_DEF:0 "the Treaty of North Atlantic Socialist Republics"
+ RGR_neutrality:0 "Rio Grande"
+ RGR_neutrality_DEF:0 "the Rio Grande"
+ RGR_fascism:0 "Rio Grande"
+ RGR_fascism_DEF:0 "the Rio Grande"
+ RGR_democratic:0 "Republic of Rio Grande"
+ RGR_democratic_DEF:0 "the Republic of Rio Grande"
+ RGR_communism:0 "Peoples Republic of the Rio Grande"
+ RGR_communism_DEF:0 "the Peoples Republic of the Rio Grande"
