--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -265,3 +265,5 @@
  VICTORY_POINTS_10927: "Andamooka"
  VICTORY_POINTS_1077: "Broken Hill"
  VICTORY_POINTS_13131: "Muru'ona"
+ VICTORY_POINTS_10769: "Monterrey"
+ VICTORY_POINTS_12835: "Nuevo Laredo"
