--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -255,6 +255,11 @@
  VICTORY_POINTS_4710: "Wavesera"
  VICTORY_POINTS_1744: "Pripolyarnyy"
  VICTORY_POINTS_10620: "Nythmaserin"
+ VICTORY_POINTS_10635: "Osel Serin"
+ VICTORY_POINTS_10564: "Omyvagroth"
+ VICTORY_POINTS_1704: "Nylhe Tirion"
+ VICTORY_POINTS_7685: "Y'enalenora"
+ VICTORY_POINTS_4730: "Mylbelle"
  VICTORY_POINTS_9786: "Wilmington"
  VICTORY_POINTS_10859: "Wakanda"
  VICTORY_POINTS_12929: "Fragneilo"
