City/Country name updates

--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -614,9 +614,9 @@
  FMU_fascism:0 "Freistaat Deutsch-Mu"
  FMU_fascism_DEF:0 "Freistaat Deutsch-Mu"
  FMU_democratic:0 "Freie Staaten von Mu"
- FMU_democratic_DEF:0 "the Freiestaaten von Mu"
- FMU_neutrality:0 "Freistaat Mu"
- FMU_neutrality_DEF:0 "the Freistaat Mu"
+ FMU_democratic_DEF:0 "the Freie Staaten von Mu"
+ FMU_neutrality:0 "Freistaaten Mu"
+ FMU_neutrality_DEF:0 "the Freistaaten Mu"
  FMU_communism:0 "Socialist Republic of Deutsch-Mu"
  FMU_communism_DEF:0 "the Socialist Republic of Deutsch-Mu"
  FMU_fascism_ADJ:0 "Deutsch-Muer"
