--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -249,17 +249,17 @@
  VICTORY_POINTS_14903: "Sanggofesaran"
  VICTORY_POINTS_13583: "Pennston"
  VICTORY_POINTS_12736: "Los Demonios"
- VICTORY_POINTS_3169: "Shehlenor"
+ VICTORY_POINTS_3169: "Mavrastok"
  VICTORY_POINTS_7738: "Belorevostok"
- VICTORY_POINTS_4669: "Amyfethas"
- VICTORY_POINTS_4710: "Wavesera"
+ VICTORY_POINTS_4669: "Anzeshrin"
+ VICTORY_POINTS_4710: "Yetrodinsk"
  VICTORY_POINTS_1744: "Pripolyarnyy"
- VICTORY_POINTS_10620: "Nythmaserin"
- VICTORY_POINTS_10635: "Osel Serin"
- VICTORY_POINTS_10564: "Omyvagroth"
- VICTORY_POINTS_1704: "Nylhe Tirion"
- VICTORY_POINTS_7685: "Y'enalenora"
- VICTORY_POINTS_4730: "Mylbelle"
+ VICTORY_POINTS_10620: "Pavildinsk"
+ VICTORY_POINTS_10635: "Ugrunad"
+ VICTORY_POINTS_10564: "Maltengorod"
+ VICTORY_POINTS_1704: "Illim"
+ VICTORY_POINTS_7685: "Nerazapad"
+ VICTORY_POINTS_4730: "Ginamtdinsk"
  VICTORY_POINTS_9786: "Wilmington"
  VICTORY_POINTS_10859: "Wakanda"
  VICTORY_POINTS_12929: "Fragneilo"
