--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -254,7 +254,7 @@
  VICTORY_POINTS_4669: "Anzeshrin"
  VICTORY_POINTS_4710: "Yetrodinsk"
  VICTORY_POINTS_1744: "Pripolyarnyy"
- VICTORY_POINTS_10620: "Pavildinsk"
+ VICTORY_POINTS_10620: "Nitmazeryn"
  VICTORY_POINTS_10635: "Ugrunad"
  VICTORY_POINTS_10564: "Maltengorod"
  VICTORY_POINTS_1704: "Illim"
