--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -27,3 +27,38 @@
  RGD_democratic_DEF:0 "the Republic of Rio Grande"
  RGD_communism:0 "Peoples Republic of the Rio Grande"
  RGD_communism_DEF:0 "the Peoples Republic of the Rio Grande"
+ #African Puppets
+ PRJ_COG_puppet_subject:0 "Kingdom of Zaire"
+ PRJ_COG_puppet_subject_DEF:0 "the Kingdom of Zaire"
+ PRJ_MOR_puppet_subject:0 "Kingdom of Morroco"
+ PRJ_MOR_puppet_subject_DEF:0 "the Kingdom of Morroco"
+ PRJ_TUN_puppet_subject:0 "Kingdom of Carthago"
+ PRJ_TUN_puppet_subject_DEF:0 "the Kingdom of Carthago"
+ PRJ_JOR_puppet_subject:0 "Kingdom of Jordon"
+ PRJ_JOR_puppet_subject_DEF:0 "the Kingdom of Jordon"
+ PRJ_SYR_puppet_subject:0 "Kingdom of Damascus"
+ PRJ_SYR_puppet_subject_DEF:0 "the Kingdom of Damascus"
+ PRJ_PAL_puppet_subject:0 "Kingdom of Palestine"
+ PRJ_PAL_puppet_subject_DEF:0 "the Kingdom of Palestine"
+ PRJ_ISR_puppet_subject:0 "Kingdom of Israel"
+ PRJ_ISR_puppet_subject_DEF:0 "the Kingdom of Israel"
+ PRJ_LBA_puppet_subject:0 "Tripoli Kingdom"
+ PRJ_LBA_puppet_subject_DEF:0 "the Kingdom of Tripoli"
+ PRJ_EGY_puppet_subject:0 "Kingdom of Egypt"
+ PRJ_EGY_puppet_subject_DEF:0 "the Kingdom of Egypt"
+ PRJ_SUD_puppet_subject:0 "United Kingdom of Sudan and Alodia"
+ PRJ_SUD_puppet_subject_DEF:0 "the United Kingdom of Sudan and Alodia"
+ PRJ_CHA_puppet_subject:0 "United Kingdom of Wadia and Sokoto"
+ PRJ_CHA_puppet_subject_DEF:0 "the United Kingdom of Wadia and Sokoto"
+ PRJ_GAB_puppet_subject:0 "Kingdom of Gabon"
+ PRJ_GAB_puppet_subject_DEF:0 "the Kingdom of Gabon"
+ PRJ_TZN_puppet_subject:0 "Kingdom of Zanzibar"
+ PRJ_TZN_puppet_subject_DEF:0 "the Kingdom of Zanzibar"
+ PRJ_ZAM_puppet_subject:0 "Kingdom of Kololo"
+ PRJ_ZAM_puppet_subject_DEF:0 "the Kingdom of Kololo"
+ PRJ_MLW_puppet_subject:0 "Kingdom of Maravi"
+ PRJ_MLW_puppet_subject_DEF:0 "the Kingdom of Maravi"
+ PRJ_ZIM_puppet_subject:0 "Shona Kingdom"
+ PRJ_ZIM_puppet_subject_DEF:0 "the Kingdom of Shona"
+ PRJ_MZB_puppet_subject:0 "Kingdom of Nyasaland" #Nyasa means lake(=^･ω･^=)
+ PRJ_MZB_puppet_subject_DEF:0 "the Kingdom of Nyasaland "
