--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -3,6 +3,7 @@
  STATE_357:0 "Rhode Island"
  STATE_521:0 "South Queensland"
  STATE_674:0 "Auralia"
+ STATE_696:0 "Vejontela"
  STATE_807:0 "Utukalla"
  STATE_808:0 "Rengtsiu"
  STATE_809:0 "Sabavtresha"
