--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -12,8 +12,8 @@
  LOADING_TIP_11:0 "\"Knives are eating utensils, but only until a fight breaks out at the table.\"\n - Old Atlantean proverb."
  LOADING_TIP_12:0 "\"In wartime, truth is so precious that she should always be attended by a bodyguard of lies.\"\n - Winston Churchill"
  LOADING_TIP_13:0 "\"Vanquished today by mechanical force, in the future we will be able to overcome by a superior mechanical force. The fate of the world depends on it.\"\n - Charles de Gaulle"
- LOADING_TIP_14:0 "The long sobs of violins of autumn. Soothe my heart with a monotone languor.\n - SOE coded transmission to French resistance"
- LOADING_TIP_15:0 "A State like Switzerland, which is nothing but a pimple on the face of Europe, cannot be allowed to continue.\n- Adolf Hitler"
+ LOADING_TIP_14:0 "The long sobs of violins of autumn wound my heart with a monotonous languor.\n - SOE coded transmission to French resistance"
+ LOADING_TIP_15:0 "A state like Switzerland, which is nothing but a pimple on the face of Europe, cannot be allowed to continue.\n- Adolf Hitler"
  LOADING_TIP_16:0 "\"I know my rights, namely that I have none, and therefore nothing to lose.\"\n - Sumukivi Aepa’ato"
  LOADING_TIP_17:0 "\"Dempsey? He couldn't fight his way out of an old cobweb.\"\n - General Miles Fritzroy"
  LOADING_TIP_18:0 "\"Fitzroy? That baboon's ass is dumber than my horse.\"\n - General Miles Dempsey"
@@ -58,4 +58,5 @@
  LOADING_TIP_58:0 "\"What a terrible catastrophe; outplayed once again by King Roderiq. What a terrifying work of art! Either he has spies in our own government or his brilliance rivals Napoleon. Over four hundred thousand dead on our side for barely 80 thousand of his, and now he's scant miles from the Mediterranean and shelling convoys in the Red Sea.\"\n -Winston Churchill"
  LOADING_TIP_59:0 "\"Yohannia would love to think of itself as a cornered lion, when in reality it is a whipped cur that bites the hand of its betters.\"\n -General George Livingston III of British Lemuria 1944"
  LOADING_TIP_60:0 "\"We seek the great goal of a unified world and will achieve it, but we must first finish another goal: the destruction of the Trinsuyinese state. We will not sleep till we have wiped them from the face of the earth.\"\n -Houpo'ean Communist General Lumiu'u Takagate"
+ LOADING_TIP_61:0 "\"A weak and contemptible people. That is what comes from a nation that turns its face from the wars and conflicts that make it great. \"\n -Jingyao Hai Qanli, Trinsuyinese Nationalist Party Leader"
  
