--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -59,4 +59,5 @@
  LOADING_TIP_59:0 "\"Yohannia would love to think of itself as a cornered lion, when in reality it is a whipped cur that bites the hand of its betters.\"\n -General George Livingston III of British Lemuria 1944"
  LOADING_TIP_60:0 "\"We seek the great goal of a unified world and will achieve it, but we must first finish another goal: the destruction of the Trinsuyinese state. We will not sleep till we have wiped them from the face of the earth.\"\n -Houpo'ean Communist General Lumiu'u Takagate"
  LOADING_TIP_61:0 "\"A weak and contemptible people. That is what comes from a nation that turns its face from the wars and conflicts that make it great. \"\n -Jingyao Hai Qanli, Trinsuyinese Nationalist Party Leader"
+ LOADING_TIP_62:0 "\"We're to blame for the war? You attacked us long before and demanded our lands and people! No! We have your men surrounded and if you're willing to let them die for your foolish pride then so be it! \"\n -Lord Inqaral Dezama, Yohannian Envoy to the Allies"
  
