--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -9,4 +9,10 @@
  JAP_polynesian_invasion_desc:1 "Our ability to wage war is only limited by our supply. The Heart of Maui represents an region rich in resources, and establishing ourselves in Mu would extend our reach even further."
  JAP_south_polynesia:1 "Secure West Mu"
  JAP_south_polynesia_desc:1 "Let it be known that Japan isn't just passing through Mu. We will secure our grip on the continent and establish it as an integral front of our empire. The pacific belongs to Japan!"
+ MEX_focus_plan_of_agua_prieta:0 "Plan of Durango"
+ MEX_focus_plan_of_agua_prieta_desc:0 "The Revolution against Díaz and the vicious infighting afterwards lasted a decade. When the dust was settled, the victorious Northern generals met at Durango, to lay out their plan for Mexico's future. They are a populist clique of modernizers and secularizers, or else a 'confederation of caciques' little better than bandit lords dividing their spoils, depending upon one's perspective."
+ MEX_focus_rio_grande_is_mexican:0 "Rio Grande is Mexican"
+ MEX_focus_rio_grande_is_mexican_desc:0 "Despite what the Gringo aggressors may claim, Rio Grande is still a part of Mexico and always will be!"
+ MEX_focus_reclaim_rio_grande:0 "Reclaim Rio Grande"
+ MEX_focus_reclaim_rio_grande_desc:0 "The time is right for us to bring the rebellious Rio Grande states back into Mexico. It will cost blood and treasure, but we must re-establish the rightful borders of Mexico."
  
