--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -46,7 +46,7 @@
  PRJ_LBA_puppet_subject_DEF:0 "the Kingdom of Tripoli"
  PRJ_EGY_puppet_subject:0 "Kingdom of Egypt"
  PRJ_EGY_puppet_subject_DEF:0 "the Kingdom of Egypt"
- PRJ_SUD_puppet_subject:0 "United Kingdom of Sudan and Alodia"
+ PRJ_SUD_puppet_subject:0 "United Kingdom of Alodia and Makuria"
  PRJ_SUD_puppet_subject_DEF:0 "the United Kingdom of Sudan and Alodia"
  PRJ_CHA_puppet_subject:0 "United Kingdom of Wadia and Sokoto"
  PRJ_CHA_puppet_subject_DEF:0 "the United Kingdom of Wadia and Sokoto"
@@ -61,4 +61,4 @@
  PRJ_ZIM_puppet_subject:0 "Shona Kingdom"
  PRJ_ZIM_puppet_subject_DEF:0 "the Kingdom of Shona"
  PRJ_MZB_puppet_subject:0 "Kingdom of Nyasaland" #Nyasa means lake(=^･ω･^=)
- PRJ_MZB_puppet_subject_DEF:0 "the Kingdom of Nyasaland "
+ PRJ_MZB_puppet_subject_DEF:0 "the Kingdom of Nyasaland"
