--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -61,5 +61,7 @@
  LOADING_TIP_61:0 "\"A weak and contemptible people. That is what comes from a nation that turns its face from the wars and conflicts that make it great. \"\n -Jingyao Hai Qanli, Trinsuyinese Nationalist Party Leader"
  LOADING_TIP_62:0 "\"We're to blame for the war? You attacked us long before and demanded our lands and people! No! We have your men surrounded and if you're willing to let them die for your foolish pride then so be it! \"\n -Lord Inqaral Dezama, Yohannian Envoy to the Allies"
  LOADING_TIP_63:0 "\"The Africans have suffered long enough! We will bring freedom to our neighbors or die trying. Damn the Europeans for their oppression of the African people! \"\n -King Roderiq I"
- LOADING_TIP_64:0 "\" If the British are so fond of Geneva then they can follow it all they want, i subscribe to no such niceties.  \"\n - Yohannian General Southern front" #Hes using poison gasses
- 
+ LOADING_TIP_64:0 "\"If the British are so fond of Geneva then they can follow it all they want, i subscribe to no such niceties.  \"\n - Yohannian General Southern front" #Hes using poison gasses
+ LOADING_TIP_65:0 "\"Your words are as empty as your future. You are alive, because I allow it.  \"\n - Emperor Mu to Geq Leader
+ LOADING_TIP_66:0 "\"I fear that I may lose him, if he doesnt end this 'game of his'; for his façade of grandeur and hope and brilliance. He is going to get himself killed. When I visit him on the front lines, he still shows how broken he really is.\"\n - Queen Ioulitta, Wife of Roderiq
+ LOADING_TIP_67:0 "\"To think he has been pushed so far that his mind, the seething hatred all focused onto one target, Britain. To face such a force that creates your worst nightmares into waking reality, monsters composed of unyielding darkness made tangible. Yes, looks can be deceiving, don’t let that calm cold stare fool you...\"\n - Queen Ioulitta, Wife of Roderiq
