--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -914,6 +914,12 @@
  
  
  ######################################################################################################################################################################################################################
+ #Neta - Prototype
+ #Tigardy - Artilery/Cannon
+ #Kar-Axiqan - Anti-Tank Anti-Landship
+ #Hotwana - Anti-Air
+ #Gandaalna - Rocket
+ #Grietian - Motor Wagon
  PRJ_infantry_equipment_0:0 "Washenga-Malipta"
  PRJ_infantry_equipment_0_short:0 "Was-Ta"
  PRJ_infantry_equipment_0_desc:0 "The Was-Ta was a long rifle produced by Malipta Arms since 1912. Already obsolete, its design was the foundation for the Future of Yohannian Armements."
@@ -922,10 +928,10 @@
  PRJ_infantry_equipment_1_desc:0 "A semi-automatic rifle, it was produced in mass quantities shortly before the Second World War to bring the outdated Yohannian Army to equal footing to other armies in the world."
  PRJ_infantry_equipment_2:0 "Mongunati-Malipta"
  PRJ_infantry_equipment_2_short:0 "Mon-Ta"
- PRJ_infantry_equipment_2_desc:0 "The only submachinegun to equip the Yohannian army, it was generally liked by its users on the northern front, and quickly gained a notorious reputaion from its targets,"
+ PRJ_infantry_equipment_2_desc:0 "The only submachinegun to equip the Yohannian army, it was generally liked by its users on the northern front, and quickly gained a notorious reputaion from its targets for its deadly close combat capabilitys in the cities of Aswan and their subsequent battles in Khartam and Port Sudan "
  PRJ_infantry_equipment_3:0 "Nbutwanat-Malipta"
  PRJ_infantry_equipment_3_short:0 "Nbu-Ta"
- PRJ_infantry_equipment_3_desc:0 "The Nbu-Ta was the result of King Roderiqs Request for a high capatcity automatic rifle with a decent sized magazine to counter the atlanteans new weapons that were being fielded against them in the north. 30 rounds and easy to clean in the mud of the Sudd.
+ PRJ_infantry_equipment_3_desc:0 "The Nbu-Ta was the result of King Roderiqs Request for a high capatcity automatic rifle with a decent sized magazine to counter the atlanteans new weapons that were being fielded against them in the north. 30 rounds and easy to clean in the mud of the Sudd. It was the weapon used in 'Operation Whiteout' the Final Engadgement of the War against the Allies."
  PRJ_infantry_at:0 "42-Karaxiqan"
  PRJ_infantry_at_desc:0 "The 42-Karaxiqan was an anti armor launcher it required two people to operate  but in a pinch 1 person could do so if they tried. It saw limited use, and was quickly replaced by the much more user friendly 44-Karaxiqan."
  PRJ_infantry_at2:0 "44-Karaxiqan"
@@ -942,38 +948,33 @@
  PRJ_anti_air_equipment_2_short:0 "34-Na/1.5"
  PRJ_anti_air_equipment_3:0 "46-Hotwana/4.1"
  PRJ_anti_air_equipment_3_short:0 "46-Na/4.1"
- PRJ_anti_tank_equipment_1:0 "37-Myrt-karaxiqan/4In"
+ PRJ_anti_tank_equipment_1:0 "37-Myrt-Karaxiqan/4In"
  PRJ_anti_tank_equipment_1_short:0 "37-Mkn/4"
  PRJ_anti_tank_equipment_2:0 "61-Myrt-Karaxiqan/5in"
  PRJ_anti_tank_equipment_2_short:0 "61-Mkn/100"
  PRJ_anti_tank_equipment_3:0 "82-Myrt-Karaxiqan/6in"
  PRJ_anti_tank_equipment_3_short:0 "82-Mkn/6"
  PRJ_rocket_artillery_equipment_1:0 "Neta-Gandaalna Tigardy"
- PRJ_rocket_artillery_equipment_1_short:0 "Ngt"
+ PRJ_rocket_artillery_equipment_1_short:0 "NGT"
  PRJ_rocket_artillery_equipment_2:0 "Gandaalna Tigardy"
  PRJ_rocket_artillery_equipment_2_short:0 "GT"
  ###Brain Exploded Here
- PRJ_motorized_equipment_1:0 "Yenámirtal 112"
- PRJ_motorized_equipment_1_short:0 "Yen/112"
- PRJ_motorized_equipment_1_desc:0 "The Model 112 is a popular vehicle produced by Yenámirtal Motors. It's a versatile all-purpose medium sized truck, adapted for military use."
- PRJ_mechanized_equipment_1:0 "Yenámirtal 112-Kindak"
- PRJ_mechanized_equipment_1_short:0 "Yen/112-Kindak"
- PRJ_mechanized_equipment_1_desc:0 "The Yen/112-Kindak is an armored Yen/112 truck, created as an early attempt at mechanization of infantry forces."
- PRJ_mechanized_equipment_2:0 "Yenámirtal 731 Haganitlerade-kindak"
- PRJ_mechanized_equipment_2_short:0 "Yen/731-HgK"
- PRJ_mechanized_equipment_2_desc:0 "The Yen/731-HgK is the first viable dedicated armored personnel carrier of the Atlantean armed forces. It is completely covered and features an uncovered machine gun on top of it."
- PRJ_mechanized_equipment_3:0 "Yenámirtal 931-Haganitlerade-kindak"
- PRJ_mechanized_equipment_3_short:0 "Yen/931-HgK"
- PRJ_mechanized_equipment_3_desc:0 "An uparmored Yen/731-HgK with protection for the tracks and wheels, and a steel mantlet for the gunner."
- PRJ_amphibious_mechanized_equipment_1:0 "Burgusamin 381-Zeówukazhedek-Haganitlerade"
- PRJ_amphibious_mechanized_equipment_1_short:0 "Bur/381-ZóHg"
- PRJ_amphibious_mechanized_equipment_1_desc:0 "The Bur/381-ZóHg is a light amphibious personnel carrier for improved infantry protection in naval invasions. It was never produced in large quantities, but saw limited action in the liberation of France."
- PRJ_amphibious_mechanized_equipment_2:0 "Wotarnial 781-Tumutúnkixe"
- PRJ_amphibious_mechanized_equipment_2_short:0 "Wot/781-Tm"
- PRJ_amphibious_mechanized_equipment_2_desc:0 "A very large tracked vehicle, the Wot/781-Tm was built for usage in the heavily defended beaches of Normandy. It was extensively used in Europe, from the D-Day invasions to the crossing of the Rhine."
- PRJ_gw_tank_equipment:0 "Gudarturak 100-Atkindo-Zehedek"
- PRJ_gw_tank_equipment_short:0 "Gud/100-Akz"
- PRJ_gw_tank_equipment_desc:0 "The Gud/100-Akz was a rushed experiment for closing the gap between the lagging Atlantean Army and the European powers. It is loosely based on the French Renault FT."
+ PRJ_motorized_equipment_1:0 "Grietian 32"
+ PRJ_motorized_equipment_1_short:0 "Gret/32"
+ PRJ_motorized_equipment_1_desc:0 "The Grietian 32 is a popular vehicle produced by Birika Motors Corporation. It's a versatile all-purpose medium sized truck, adapted for military use in rough terrain."
+ PRJ_mechanized_equipment_1:0 "Neta-Yascenl Qarina"
+ PRJ_mechanized_equipment_1_short:0 "NYa/Ina"
+ PRJ_mechanized_equipment_1_desc:0 "The NYa/Qar is an armored Prototype Grietian truck, designed at the behest of King Roderiq and Lord Kaphel to deal with the increassingly mechanized units being deployed in the northern and southern fronts. Plauged by problems with the engine seals it saw limited production and was used as a basis for the final product"
+ PRJ_mechanized_equipment_2:0 "Yascenl Qarina"
+ PRJ_mechanized_equipment_2_short:0 "Yas/Ina"
+ PRJ_mechanized_equipment_2_desc:0 "The Yas-Qar is the first viable dedicated armored personnel carrier of the Yohannian Army. It is completely covered and features an uncovered machine gun on top of it. with tracks designed specifically for traversing the mud of the Sudd"
+ PRJ_mechanized_equipment_3:0 "Yascenl Qarina-44"
+ PRJ_mechanized_equipment_3_short:0 "Yas/Ina-44"
+ PRJ_mechanized_equipment_3_desc:0 "The Yas/Qar-44 was the final design itteration of the Yascenl series of mechanized infantry vehicles with improved engine preformance and used extensivly in 'Operation Drysleep' "
+ PRJ_gw_tank_equipment:0 "Neta-Axiqan"
+ PRJ_gw_tank_equipment_short:0 "Net/qan"
+ PRJ_gw_tank_equipment_desc:0 "The Neta-Axiqan was the first yohannian based tank designed by the defense branch of Zecharus Motors its rugged design based on images of the British landship was adopted quickly into the Yohannian Army as its first main battle tank. Its dificulty to produce was overlooked as the continued modernization of the Yohannian Military was top priority."
+ #Error Brain Broke
  PRJ_light_tank_equipment_1:0 "Burgusamin 200-Atkindo-Čanak"
  PRJ_light_tank_equipment_1_short:0 "Bur/200-Ak-Č"
  PRJ_light_tank_equipment_1_desc:0 "The Bur/200-Ak-Č is the first tank to enter service in the Atlantean army. Designed by Burgusamin Motor, this diminute tank fits three crewmen. It was first introduced in 1935 and equipped one mobile division."
