--- a/localisation/GEQ_l_english.yml
+++ b/localisation/GEQ_l_english.yml
@@ -79,7 +79,7 @@
  geq.31.t:0 "Britain doesn't invest in Geq!"
  geq.31.d:0 "The British have decided to ignore Geq."
  geq.31.a:0 "Awww heck"
- GEQ_exploiting_dugeqmu_resources:0 "Exploiting Dugeqmu Resources"
+ GEQ_exploiting_dugeqmu_resources:0 "Exploiting Duqegmu Resources"
  GEQ_exploiting_dugeqmu_resources_desc:0 ""
  GEQ_the_nations_future:0 "The Nation's Future"
  GEQ_the_nations_future_desc:0 ""
@@ -125,7 +125,7 @@
  GEQ_develop_our_empire_desc:0 ""
  GEQ_secure_strategic_locations:0 "Secure Strategic Locations"
  GEQ_secure_strategic_locations_desc:0 ""
- GEQ_embrace_geqian_militarism2:0 "Embrace Dugeqmu Militarism"
+ GEQ_embrace_geqian_militarism2:0 "Embrace Duqegmu Militarism"
  GEQ_embrace_geqian_militarism2_desc:0 ""
  GEQ_support_the_middle_class:0 "Support the Middle Class"
  GEQ_support_the_middle_class_desc:0 ""
