Vanilla countries fixed

--- a/localisation/aml_supply_area_names_l_english.yml
+++ b/localisation/aml_supply_area_names_l_english.yml
@@ -67,3 +67,4 @@
  SUPPLYAREA_424:0 "SupplyArea"
  SUPPLYAREA_425:0 "SupplyArea"
  SUPPLYAREA_447:0 "SupplyArea"
+ ANDAMOOKA_CANAL:0 "Andamooka Canal"
