--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -1,7 +1,51 @@
 ﻿l_english:
+#traits#
+ roderiq_nightmare_genius:0 "Brilliant Mind"
+ roderiq_nightmare_genius_desc:0 "does this show up?"
+ 
+ #Characters
+ PRJ_King_Roderiq:0 "King Roderiq I"
+ PRJ_King_Roderiq_desc:0 "fluff text"
+ PRJ_Amfri_Yuriye:0 "Amfri Yuriye"
+ PRJ_Amfri_Yuriye_desc:0 "fluff text"
+ PRJ_Warqneh_Hassbah:0 "Warqneh Hassbah"
+ PRJ_Warqneh_Hassbah_desc:0 "fluff text"
+ PRJ_Lexande_Melaqe:0 "Lexande Melaqe"
+ PRJ_Lexande_Melaqe_desc:0 "fluff text"
+ PRJ_Qaleb_Shada:0 "Qaleb Shada"
+ PRJ_Qaleb_Shada_desc:0 "fluff text"
 
-#PRJ Foci
+ PRJ_silent_workhorse:0 "Silent Workhorses"
+ PRJ_war_industrialist:0 "War Industrialist"
+ PRJ_backroom_backstabber:0 "backroom backstaber"
+ PRJ_prince_of_terror:0 "Prince of Terror"
+ PRJ_armaments_organizer:0 "arnaments organizer"
+ PRJ_democratic_politician:0 "democratic polititian"
+ PRJ_fascist_demagogue:0 "fascist demagogue"
+ PRJ_communist_revolutionary:0 "communist revolutionary"
+ PRJ_grand_fleet_proponent:0 "grand fleet proponent"
+ PRJ_victory_through_airpower:0 "victory through airpower"
+ PRJ_rocket_scientist:0 "Rocket Scientist"
+ PRJ_naval_theorist:0 "naval theorist"
+ PRJ_military_theorist:0 "military theorists"
+ PRJ_army_chief_morale_2:0 "army cheif morale"
+ PRJ_army_chief_offensive_2:0 "army cheif offensive"
+ PRJ_army_chief_drill_2:0 "army cheif drill"
+ PRJ_army_chief_planning_2:0 "army chief planning"
+ PRJ_navy_naval_air_defense_2:0 "naval air defense"
+ PRJ_navy_fleet_logistics_3:0 "naval fleet logistics"
+ PRJ_navy_chief_decisive_battle_3:0 "naval decisive battle"
+ PRJ_navy_chief_maneuver_3:0 "naval chief manuver"
+ PRJ_air_strategic_bombing_2:0 "air strategic bombing"
+ PRJ_air_chief_old_guard:0 "air chief oldgaurd"
+ PRJ_air_strategic_bombing_1:0 "Air strat bombing"
+ PRJ_navy_screen_2:0 "naval screening"
+ PRJ_army_regrouping_1:0 "army regrouping"
+ PRJ_navy_capital_ship_3:0 "navy capital ship"
+ PRJ_air_naval_strike_1:0 "air naval strike"
+ PRJ_navy_carrier_2:0 "naval carrier"
 
+#foci
  PRJ_save_ethiopia:0 "Intervene in Ethiopia"
  PRJ_save_ethiopia_desc:0 "The imperial forces of Rome march on one of the last free african nations. Lord *name* suggests we intervene immediatly ."
  PRJ_abandon_ethiopia:0 "Leave Ethiopia to her fate"
