Map and name updates

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -494,3 +494,6 @@
  ATL_dockyard_curfews_toggle:0 "Toggle Curfews on Dockyards"
  ATL_training:0 "Improve the Police Training"
  ATL_equip:0 "Distribute Better Equipment"
+ ATL_democratic_politician:0 "Debnilat Ħastimalak"
+ ATL_fascist_demagogue:0 "Arvisip Nażemut"
+ ATL_communist_revolutionary:0 "Ŧerxu Ežnat"
