--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ VICTORY_POINTS_13010:0 "Reitanitz"
  VICTORY_POINTS_13047:0 "Wake Harbor"
  VICTORY_POINTS_14999:0 "Nakhlagluta"
  VICTORY_POINTS_14301:0 "Bongo"
