--- a/localisation/replace/vanilla_state_names_l_english.yml
+++ b/localisation/replace/vanilla_state_names_l_english.yml
@@ -7,4 +7,5 @@
  STATE_521:0 "South Queensland"
  STATE_579:0 "Lower Hyperborea"
  STATE_580:0 "Upper Hyperborea"
+ STATE_696:0 "Vejontela"
  STATE_727:0 "Islárida"
