Fixed Fronted BS

--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -37,3 +37,7 @@
  KUM_neutrality_party:0 "Kumari Royalist Movement"
  KUM_communism_party:0 "Communist Party of Kumari"
  KUM_fascism_party:0 "Kumari Kandam Congress"
+ PRJ_neutrality_party:0 "Hierosolimitanus Dynasty"
+ PRJ_fascism_party:0 "Religious Zealots"
+ PRJ_democratic_party:0 "House of Peasents"
+ PRJ_communism_party:0 "Qumuism Party"
